# bevy-shader-nodes

./: Cargo.toml
src/: main.rs  menu.rs  nodes.rs  widgets.rs
src/shader/: builder.rs  io.rs  mod.rs  nodes.rs
src/widgets/: material_preview_widget.rs  mod.rs  preview.wgsl  texture_widget.rs
