[package]
name = "bevy-shader-nodes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.10"
bevy-flow-node = { git = "https://github.com/displaced-lobster/bevy-node-editor.git" }
color-eyre = "0.5"
nfd = "0.0.4"
